--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,11 @@ header{
 	float: left;
 	display: block;
 	text-indent: -999em;
-	overflow: hidden; }
+	overflow: hidden;
+	
+	
+}
+	
 
 
 nav{
@@ -47,6 +51,8 @@ nav li{
 	display: inline-block;
 	padding-left: 20px;
 	cursor: pointer;	
+	float:right;
+	margin-top: 5px;
 }
 
 nav li a:link {
@@ -70,12 +76,16 @@ nav li a:active {
 }
 
 
+
+
 /* HERO Image*/
 .hero-img{
 	width: 940px;
 	max-height: 850px;
 	overflow: hidden;
-	
+	text-align: center;
+	margin: 20px auto -10px auto;
+
 }
 
 video{ 
@@ -84,14 +94,14 @@ video{
 
 .image-overlay {
 	position: absolute;
-	top: 136px;
-	height: 550px;
+	top: 160px;
+	height: 180px;
 	width: 940px;
 	z-index: 100;
-	background: url("../images/imac.png") no-repeat;
+	background: url("../images/explore.svg") no-repeat;
 	background-position: bottom;
 	overflow: visible;}
-
+	
 .image-overlay h1 {
 	font-weight: 100;
 	line-height: 1.2;
@@ -102,74 +112,31 @@ video{
 
 /* introduction */
 .introduction{
-	width: 100%;
-	padding: 100px 0 90px 0;
-	background-color: #fff;
-	float:left;
+	width: 940px;
+	text-decoration-color: #ffffff;
+	padding: 60px 0 90px 0;
+	margin: auto;
+	background-position: center center;
+background: -webkit-linear-gradient(#387c5c 0%, #ffffff 100%);
+background: -o-linear-gradient(#387c5c 0%, #ffffff 100%);
+background: linear-gradient(#387c5c 0%, #ffffff 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#387c5c', endColorstr='#ffffff',GradientType=0 );  
 }
 
-
-.intro-content h3{
-	margin-top: 10px;
-	color:#000;
-	
+.intro-content img{
+	width: 450px; 
+	padding: 5px 0 0 30px;
 	
 }
 
-
-/* Cards */
-.cards{
-		width: 100%;
-		padding: 100px 0;
-		background: #EEEEEE;
-		float: left;
-		text-align: center;
-	}
-	.container{
-		width: 940px;
-		margin: 0 auto;
-	}
-	
-	.section-head{
-		font-family: 'Roboto Slab', serif;
-		font-size: 2em;
-		font-weight: 100;
-		padding-bottom: 20px; 
-	}
-	.section-copy{
-		font-family: 'Roboto', sans-serif;
-		font-weight: 100;
-		font-size: 1em;
-		
-	padding: 0 100px 20px;
+.intro-content h2{
+	padding-left: 30px;
 }
-	
-	.fa-usb, .fa-balance-scale, .fa-cogs {
-		font-size: 6em;
-		color:#FFFFFF; 
-		text-shadow: 2px 2px 5px #6e6e6e;
-		margin-bottom: 10px;
-	}
 
-	
-	.card-description {
-		font-family: 'Roboto', sans-serif;
-		background: #FFFFFF;
-		padding: 40px;
-		box-shadow: 0 3px 6px rgba(0, 0, 0, .2);
-		border-top-left-radius: 30px;
-		border-bottom-right-radius: 30px;
-	}
-	
-	.columns_3{
-		width: 300px;
-		float: left;
-		margin-right: 20px;
-		
-	}
-	.columns_3:last-of-type {
-		margin-right: 0;
-	}
+.intro-content p{
+	padding-right: 30px;
+}
+
 
 
 /* about Us*/ 
@@ -180,9 +147,15 @@ video{
 
 .about {
 	width: 100%;
-	padding: 100px 0;
-	background-color: #fff;
+	background-color: none;
 	float: left;
+	margin-top: -40px;
+	margin-bottom: 60px;
+	
+}
+
+.about hr {
+	text-decoration: #000000;
 }
 
 .about h4 {
@@ -193,10 +166,18 @@ video{
 	
 }
 
+.about p{
+	padding-left: 30px;
+}
+
+.about iframe{
+	margin-right: 30px;
+	margin-top: 5px;
+}
 
 .drk-otl-btn {
 	display: inline-block;
-	padding: 0 15px;
+	padding: 0 10px 0 10px;
 	text-align: center;
 	font-weight: 300;
 	font-size: 1em;
@@ -204,7 +185,7 @@ video{
 	border: 1px solid #000;
 	border-radius: 5px;
 	cursor: pointer;
-	margin: 20px 0; 
+	margin-left: 30px;
 }
 
 .drk-otl-btn:link {
@@ -214,25 +195,7 @@ video{
 
 .drk-otl-btn:hover {
 	color: #000;
-	background-color: aquamarine;	
-}
-
-.testimonials{
-	width: 100%;
-	padding: 100px 0;
-	background-color: #fff;
-	text-align: center;
-	float: left;	
-}
-
-
-.testimonials h4{
-	margin-bottom: 10px;
-}
-
-.testimonials img{
-	margin-bottom: 10px;
-	border-radius: 50%;
+	background-color: #3C6C91;	
 }
 
 
@@ -241,12 +204,16 @@ video{
 
 .features h2{
 	text-align: center;
+	float: right;
+	margin-right: 30px;
 }
 .features{
 	width: 100%; 
 	padding: 100px 0;
-	background-color: #cccccc;
+	background: url("../images/blur copy.jpg") no-repeat;
 	float: left;
+	margin: auto;
+	background-position: center center;
 }
 
 .feature-items {
@@ -255,12 +222,13 @@ video{
 
 .feature-items h4{
 	text-align: left;
-	margin-left: 60px; 
+	margin-left: 30px; 
 }
 
 .feature-items p{
 	margin-bottom: 20px;
-	margin-left: 60px;
+	margin-left: 30px;
+	margin-right: 30px;
 	text-align: left;
 }
 
@@ -309,11 +277,11 @@ video{
 
 /*-----Locations-----*/
 
-.locations h2{
+.gallery h2{
 	text-align: center;
 }
 
-#locations {
+#gallery {
 	width: 100%;
 	padding:100px;
 	background-color:#fff;
@@ -321,85 +289,83 @@ video{
 	text-align: left;
 }
 
-.locations h4 {
+.gallery h4 {
 	margin-bottom: 10px;
 	
 
 }
 
-.locations p {
+.gallery p {
 	font-size: .9em;
 	line-height: 1.3;
 }
 
-.locations img { 
+.gallery img { 
 	margin-bottom: 10px;
 }
 
 
-.location-btn a:link {
-	display: block;
-	outline: 0;
-	border-radius: 0px;
-	padding: 5px 15px;
-	width: 100px;
-	background-color: #fff;
-	font-size: .8em;
-	font-weight: 500; 
-	letter-spacing: .03px;
-	text-indent: .03px;
+
+
+
+.gallery-btn{
+	color: #000;
 	text-decoration: none;
-	text-transfom: uppercase;
 	text-align: center;
-	margin-top: 20px;
-	border: 1px solid #000;
-	margin-left: auto;
-	margin-right: auto;
+	margin-bottom: 50px;
+	font-weight: 300;
+	cursor: pointer;
+	
 }
 
+.gallery-btn a:link {
+	color: #000;
+	text-decoration: none;
+	margin: auto;
+	float: center;
+}
 
-
-.location-btn a: visited {
+.gallery-btn a: visited {
 	color: #fff;
 	text-decoration: none;
 }
 
 
-.location-btn a: hover {
+.gallery-btn a: hover {
 	color: #fff;
 	text-decoration: none;
 	background-color: #434141;
 }
 
 
+.gallery-btn a: active {
+	color: #fff;
+	text-decoration: none;
+}
 
 
 
 
-#contact {
+#get-involved {
 	width: 100%;
 	padding: 100px 0;
 	background: #efefef;
 	float: left;
 }
 
-#contact h2 {
-	padding-bottom: 20px;
+#get-involved h2 {
 	text-align: center;
+	float: left;
+	margin-left: 30px; 
+	
 }
 
-#contact p {
+#get-involved p {
 	padding: 20px;
+	margin-left: 10px;
+	
 }
 
-.contact-form img{
-	width: 460px;
-	padding: 0;
-	font-family: 'Roboto', sans-serif;
-	font-size: 0.9em;
-	font-weight: 100;
-	color: #ffffff;
-}
 
 .contact-form input [type="text"],
 .contact-form input [type="email"],
@@ -420,9 +386,41 @@ video{
 	height: 200px;
 }
 
-#message{
-	height: 262px;
+#name{
+	width:348px;
+	margin-bottom: 10px;
+	margin-top: 25px;
+	float: right;
+	margin-right: 30px;
 }
+
+#email{
+	width: 348px;
+	float: right;
+	margin-right: 30px;
+}
+
+#message{
+	height: 200px;
+	width: 348px;
+	margin: 10px 30px 0 0;
+	float: right;
+}
+
+.contact-form input.button {
+	display: inline-block;
+	padding: 0 10px 0 10px;
+	text-align: center;
+	font-weight: 300;
+	font-size: 1em;
+	line-hight: 36px;
+	border: 1px solid #000;
+	border-radius: 5px;
+	cursor: pointer;
+	float: right;
+	margin: 15px 30px 0 0;
+}
+	
 
 .contact-form select {
 	text-indent: 0.01px;
@@ -439,21 +437,117 @@ video{
 
 .button {
 	display: block;
-	float: right;
 	outline: 0;
 }
 
-.contact-form input.button {
-	width: 100px;
-	height: 40px;
-	color: #888;
-	border: 1px solid #ffffff;
-	font-size: 1.1em;
-	border-radius: 35px;
+#get-involved{
+	background: #ffffff;
+background: -moz-linear-gradient(top, #ffffff 0%, #db6a13 99%);
+background: -webkit-linear-gradient(top, #ffffff 0%,#db6a13 99%);
+background: linear-gradient(to bottom, #ffffff 0%,#db6a13 99%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#db6a13',GradientType=0 );
 }
 
 
 .contact-form input.button:hover {
-	color: #000000;
-	border: 1px solid #000000;
+	color: #000;
+	background-color: #3C6C91;	
+}
+
+
+
+.sustain{
+	background:url("../images/map.jpg") no-repeat;
+	width: 100%; 
+	float: left;
+	margin: auto;
+	background-position: center center;
+	
+}
+
+.sustain img{
+	width: 292px;
+	height: 292px;
+	padding: 15px
+}
+
+.sustain p{
+margin-right: 15px;
+	margin-left: 15px;
+}
+
+.sustain h2{
+	margin-right: 30px;
+	margin-top: 50px;
+	float: right;
+}
+
+
+.sponsors{
+	background-color: #1F4664;
+}
+
+
+.sponsors img{
+	margin: 30px 75px;
+	
+}
+
+.yosemitelogo img{
+	border-radius: 50%;
+}
+
+
+
+
+
+
+
+
+
+footer{
+	width: 100%;
+	padding: 50px 0;
+	text-align: center;
+	background-color: #4A7099;
+}
+
+footer a:link {
+	color:#959595;
+	text-decoration: none;
+}
+
+footer a:visited {
+	color: #959595;
+}
+
+footer a:hover {
+	color: #ffffff;
+}
+
+footer a:active {
+	color: #ffffff;
+}
+
+.copyright {
+	width:100%;
+	color:#959595;
+}
+
+.copyright p {
+	margin: 0;
+}
+
+.fa-linkedin-square,
+.da-twitter-square,
+.fa-facebook-square {
+		font-size: 2em;
+		margin:20px 5px 0 5px;
+		color: #959595;
+}
+
+.fa-linkedin-square:hover,
+.da-twitter-square:hover,
+.fa-facebook-square:hover{
+	color: #ffffff;
 }
